# market-dashboard

./: .directory  .env  .gitignore  Cargo.toml  LICENSE.md  README.md  build_web.sh
docs/: index.html  market_dashboard.js  market_dashboard_bg.wasm
src/: app.rs  lib.rs  main.rs
src/data/: errors.rs  image.rs  item.rs  mod.rs  states.rs  statics.rs  user.rs
src/views/: add_item.rs  create_config.rs  edit_item.rs  index.rs  item_page.rs  login.rs  mod.rs  profile.rs  purchase_item.rs
