[package]
name = "market_dashboard"
version = "0.1.0"
authors = ["Samuel Boyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.7"
egui = "0.7"
epi = { version = "0.7", features = ["persistence"] }
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
egui_glium = "0.7"

[profile.release]
opt-level = 2 # fast and small wasm
