[package]
name = "market_dashboard"
version = "0.1.0"
authors = ["Samuel Boyden <stboyden@stboyden.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
eframe = "0.7"
egui = "0.7"
egui_glium = { version = "0.7", features = ["persistence"] }
epi = { version = "0.7", features = ["persistence"] }
image = { version = "0.23", default_features = false, features = ["jpeg", "png"] }
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 2 # fast and small wasm
